--- a/by-the-pods/src/ShowList.css
+++ b/by-the-pods/src/ShowList.css
@@ -9,6 +9,6 @@
 
 .show-grid{
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    grid-template-columns: repeat(4, 1fr);
     gap: 20px;
 }
