--- a/by-the-pods/src/ShowList.css
+++ b/by-the-pods/src/ShowList.css
@@ -20,4 +20,14 @@
     box-shadow: 0 0 10px lightgoldenrodyellow;
 }
 
-.
+.show-card img{
+    width: 100%;
+    height: 150px;
+    object-fit: cover;
+    border-radius: 10px;
+}
+
+.show-card h2 {
+    font-weight: bold;
+    margin-bottom: 10px;
+}
