--- a/by-the-pods/src/App.css
+++ b/by-the-pods/src/App.css
@@ -40,3 +40,10 @@
 .read-the-docs {
   color: #888;
 }
+
+.footer {
+  background-color: #333;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
