--- a/by-the-pods/src/App.css
+++ b/by-the-pods/src/App.css
@@ -42,8 +42,22 @@
 }
 
 .footer {
-  background-color: #333;
-  color: #fff;
-  padding: 20px;
+  background-color: black;
+  color:white;
+  padding: 10px;
   text-align: center;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height:150px;
+}
+
+.header {
+  background-color: black;
+  color:white;
+  padding: 10px;
+  text-align: center;
+  position: absolute;
+  top: 0;
+  width: 100%;
 }
