--- a/by-the-pods/src/App.css
+++ b/by-the-pods/src/App.css
@@ -1,4 +1,9 @@
-body
+.App{
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
 
 .footer {
   background-color: black;
@@ -20,3 +25,38 @@ body
   top: 0;
   width: 100%;
 }
+
+.show-list{
+  max-width: 800px;
+  margin: 40px auto;
+  padding: 20px;
+  background-color: aqua;
+  border: 1px solid grey;
+  box-shadow: 0 0 10px lightgray;
+}
+
+.show-grid{
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+}
+
+.show-card {
+  background-color: cyan;
+  padding: 20px;
+  border: 1px solid lightgrey;
+  box-shadow: 0 0 10px lightgoldenrodyellow;
+}
+
+.show-card img{
+  width: 100%;
+  height: 150px;
+  object-fit: cover;
+  border-radius: 10px;
+}
+
+.show-card h2 {
+  font-weight: bold;
+  margin-bottom: 10px;
+}
+
