--- a/by-the-pods/src/App.css
+++ b/by-the-pods/src/App.css
@@ -1,8 +1,9 @@
 .App{
   margin: 0;
   display: flex;
+  justify-content: space-between;
   flex-direction: column;
-  min-height: 100vh;
+  min-height: 100px;
 }
 
 .footer {
@@ -14,6 +15,7 @@
   bottom: 0;
   width: 100%;
   height:150px;
+  ;
 }
 
 .header {
@@ -33,11 +35,12 @@
   background-color: aqua;
   border: 1px solid grey;
   box-shadow: 0 0 10px lightgray;
+  
 }
 
 .show-grid{
   display: grid;
-  grid-template-columns: repeat(2, 1fr);
+  grid-template-columns: repeat(3, 1fr);
   gap: 20px;
 }
 
